Finish the modify of jekyll template, 2016-10-15

--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+description: 保持饥饿，保持无知
 header-img: "img/tag-bg.jpg"
 ---
 
